@@ -1,3 +1,9 @@
+Fri Apr 15 15:10:29 2011  Akinori MUSHA  <knu@iDaemons.org>
+
+	* lib/uri/generic.rb (#route_from_path): Fix a bug where
+	  URI('http://h/b/').route_to('http://h/b') wrongly returned './'
+	  (should be '../b'). [Bug #4476]
+
 Thu Apr 14 23:43:43 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* numeric.c (ruby_float_step): wrong loop condition.
